# modelship-home-assistant

./: README.md  bump.sh  repository.yaml
.github/workflows/: bump-modelship.yml
modelship/: CHANGELOG.md  DOCS.md  Dockerfile  build.yaml  config.yaml  run.sh
modelship-voice/: CHANGELOG.md  DOCS.md  Dockerfile  build.yaml  config.yaml  pyproject.toml  requirements.txt  run.sh
modelship-voice/bridge/: __init__.py  __main__.py  audio.py  client.py  discovery.py  handler.py  settings.py  voices.py  wyoming_info.py
modelship-voice/tests/: test_audio.py  test_client.py  test_discovery.py  test_info.py
