[project]
name = "modelship-voice-bridge"
version = "0.1.0"
description = "Wyoming ↔ modelship bridge for Home Assistant Assist (STT + TTS)"
requires-python = ">=3.12"
dependencies = [
    "wyoming>=1.5.2,<2",
    "httpx>=0.27",
    "PyYAML>=6",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.setuptools.packages.find]
include = ["bridge*"]
